--- a/index.html
+++ b/index.html
@@ -1,28 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- icon cdn link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font cdn link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Influencer-Gear-Website-Template</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            
-        </nav>
+      <nav class="nav-container">
+        <div class="nav-title share-color font-24-bold">
+          Influencer products
+        </div>
+        <div class="nav-item font-16-dark-3-semibold">
+          <ul>
+            <li class="item">Home</li>
+            <li class="item">Products</li>
+            <li class="item">Sign Up</li>
+            <li class="item">Login</li>
+            <li class="item"><i class="fa-solid fa-magnifying-glass"></i></li>
+            <li class="item"><i class="fa-solid fa-cart-shopping"></i></li>
+          </ul>
+        </div>
+      </nav>
+      <figure class="banner">
+        <div class="banner-container">
+          <h1 class="banner-title">Start your Journey as Influencer</h1>
+          <p class="banner-description font-16-dark-3-semibold">
+            orem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="banner-btn">
+            Preebook now <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="banner-bg">
+          <img
+            class="banner-pic"
+            src="./images/main-camera.png"
+            alt="Camera Pic"
+          />
+        </div>
+      </figure>
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
