added a Sponspors section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,39 @@
         </div>
       </figure>
     </header>
-
-    <main></main>
+    <main>
+      <section class="sponsor">
+        <div class="sponsor-logo">
+          <img
+            class="s-pic"
+            src="./images/logos/Target.svg"
+            alt="Target Logo"
+          />
+          <img
+            class="s-pic"
+            src="./images/logos/Walmart.svg"
+            alt="Walmart Logo"
+          />
+          <img
+            class="s-pic"
+            src="./images/logos/Rakuten.svg"
+            alt="Rakuten Logo"
+          />
+          <img class="s-pic" src="./images/logos/Ebay.svg" alt="Ebay Logo" />
+          <img
+            class="s-pic"
+            src="./images/logos/Daraz.pk Logo.svg"
+            alt="Daraz Logo"
+          />
+          <img
+            class="s-pic"
+            src="./images/logos/Alibaba.svg"
+            alt="Alibaba Logo"
+          />
+          <img class="s-pic" src="./images/logos/Amazon.svg" alt="" />
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
