added a Popular Collection and Featured products at one place section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             orem ipsum dolor sit amet, consectetur adipiscing elit. Sem
             vestibulum sed scelerisque eros. Lectus faucibus.
           </p>
-          <button class="banner-btn">
+          <button class="banner-btn btn-space">
             Preebook now <i class="fa-solid fa-arrow-right"></i>
           </button>
         </div>
@@ -59,6 +59,7 @@
       </figure>
     </header>
     <main>
+      <!-- ----- Sponspors ----- -->
       <section class="sponsor">
         <div class="sponsor-logo">
           <img
@@ -88,6 +89,206 @@
             alt="Alibaba Logo"
           />
           <img class="s-pic" src="./images/logos/Amazon.svg" alt="" />
+        </div>
+      </section>
+      <!-- ----- Popular Collection ----- -->
+      <section class="item-container">
+        <h2 class="container-title">Popular Collection</h2>
+        <div class="container-box">
+          <div class="card-item">
+            <img src="./images/tripod.png" alt="Flex Tripod Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Flex Tripod</h2>
+              <h3 class="card-price">$50.48</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/mic.png" alt="Microphone Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Microphone</h2>
+              <h3 class="card-price">$120.25</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/airpod.png" alt="Airbuds Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Airbuds</h2>
+              <h3 class="card-price">$100.00</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/drone.png" alt="Drone Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Drone</h2>
+              <h3 class="card-price">$980.25</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/lights.png" alt="Light Setup Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Light Setup</h2>
+              <h3 class="card-price">$1200.00</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/camera.png" alt="Vlogging Camera Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Vlogging Camera</h2>
+              <h3 class="card-price">$1800.80</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/setup.png" alt="Photoshoot set Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Photoshoot set</h2>
+              <h3 class="card-price">$820.40</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/single-light.png" alt="Green Screen Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Green Screen</h2>
+              <h3 class="card-price">$25.48</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+
+          <div class="card-item">
+            <img src="./images/action.png" alt="Action Camera Pic" />
+            <div class="card-box">
+              <h2 class="card-title">Action Camera</h2>
+              <h3 class="card-price">$380.00</h3>
+              <div class="card-star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star-half-stroke"></i>
+                <p>4.99</p>
+              </div>
+              <p class="card-description font-16-dark-3-semibold">
+                Wordwide shifting available Buyers protection possible!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="see-more">
+          <span class="more"
+            >See More<i class="fa-solid fa-arrow-right"></i
+          ></span>
+        </div>
+      </section>
+      <!-- Featured products at one place -->
+      <section>
+        <div class="products">
+          <div class="products-pic">
+            <img src="./images/gear.png" alt="" />
+          </div>
+          <div class="products-container">
+            <h1 class="products-title">Featured products at one place</h1>
+            <p class="products-description font-16-dark-3-semibold">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <button class="products-btn btn-space">
+              Join Now <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
         </div>
       </section>
     </main>
