--- a/index.html
+++ b/index.html
@@ -292,7 +292,24 @@
         </div>
       </section>
     </main>
-
-    <footer></footer>
+    <!-- --- Footer --- -->
+    <footer>
+      <section class="footer-bg">
+        <div footer-box>
+          <div class="footer-container">
+            <h2 class="footer-title">Influencer products</h2>
+            <p class="footer-description">
+              Copyright © 2020 influencer products <br />All rights reserved
+            </p>
+          </div>
+          <div class="footer-icon">
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-square-youtube"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-solid fa-basketball"></i>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
